# helloworld-dot

./: README.md
docs/block-info/: index.html
docs/block-info/css/: app.2ae1c6ce.css  app.7b0fcfd7.css
docs/block-info/js/: app.09f5a9c1.js  app.09f5a9c1.js.map  app.7b046718.js  app.7b046718.js.map  app.95b2a44a.js  app.95b2a44a.js.map  chunk-vendors.1a2a45ee.js
dot-backend/: README.md  index.js  package.json
dot-frontend/: README.md
dot-frontend/block-info/: README.md  package.json
dot-telemetry/: README.md
erc20-ink/: README.md
erc20-ink/erc20-y12t/: Cargo.toml  README.md  lib.rs
forkless-upgrade/: README.md
frame-dev/: README.md
frame-dev/substrate-node/: rust-toolchain
identity/: README.md
local-subdev/: README.md
moonbeam-erc20/: README.md  remix-result.md  truffle-result.md
multisig/: README.md
multisig/multisig-cli/: README.md  package.json  tsconfig.json
orml-nft/: README.md
orml-nft/orml-nft-node/: type.json
orml-token/: README.md  polkadot-js-type.json
orml-token/orml-token-node/: Cargo.toml
phala/contract-red/: README.md
phala/local-phala/: README.md
remix-plasm/: README.md
sidecar-fee/: README.md  docker-compose.yml
sidecar-fee/nginx-cors/: default.conf
sidecar-fee/sidecar-js/: README.md  package.json
sidecar-fee/substrate-frontend/: Dockerfile  package.json
sidecar-rest/: README.md
sidecar-rest/pending-payouts/: Cargo.toml
sidecar-rest/pending-payouts/src/: main.rs
sidecar-rest/substrate_sidecar/: Cargo.toml  README.md
sol-plasm/: README.md
sol-plasm/sources/: flipper.sol
(+347 files in other folders)
