[package]
name = "pending-payouts"
version = "0.1.0"
authors = ["y12studio <y12studio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subsidecar = { path = "../substrate_sidecar" }
tokio = { version = "0.2", features = ["full"] }
clap = "3.0.0-beta.2"